iac/modules/security/database.tf
resource "aws_security_group" "database" {
  name = "${var.project_name}-${var.environment}-db-sg"
  description = "Permitir trafico entre ECS y la BD"
  vpc_id = var.vpc_id

  ingress {
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    security_groups = [aws_security_group.ecs_tasks.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-db-sg"
  }
}
